fix z-index for Blazor theme on mobile

--- a/Oqtane.Server/wwwroot/Themes/Oqtane.Themes.BlazorTheme/Theme.css
+++ b/Oqtane.Server/wwwroot/Themes/Oqtane.Themes.BlazorTheme/Theme.css
@@ -214,11 +214,11 @@
         margin-top: 3.5rem;
         position: fixed;
         width: 100%;
-        z-index: 2;
+        z-index: 4;
     }
 
     .main .top-row {
-        z-index: 2;
+        z-index: 4;
     }
 
     .main > .top-row.px-4 {
